# fmt

./: AI_FORMAT_DESIGN.md  CMakeLists.txt  FULL_IMPLEMENTATION_README.md  NEW_FEATURES_README.md  build_test.bat  test_complete_features.cpp  test_new_features.cc
include/fmt/: ai_format.h  cross_format.h  distributed_format.h
src/: cross_format.cc  distributed_format.cc
